--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.timeline": "1.2.13",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.management": "3.2.4",
+    "com.unity.xr.mock-hmd": "1.2.0-preview.1",
     "com.unity.xr.openvr.standalone": "2.0.5",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
